case-3065 - Ie7 content shift fixes

--- a/css/ie/ie7.css
+++ b/css/ie/ie7.css
@@ -81,3 +81,7 @@
 #region-user-first {
   bottom: -10px;
 }
+
+.block-system-main .content .panel-panel.grid-12{
+  margin-left: 0;
+}
